# sockets

./: Makefile  index.js  package-lock.json  package.json  server.js
app/: .gitignore  package-lock.json  package.json
app/src/: https.js  redis.js  server.js
csock/: CMakeLists.txt  Makefile
csock/core/: CMakeLists.txt
csock/core/src/: client.cpp  host.cpp  http.cpp  http.h  socket.cpp  socket.h
csock/ext/dstrct/: CMakeLists.txt
csock/src/: main.cpp
psock/lib/: CMakeLists.txt
psock/lib/data-structs/: queue.h
psock/lib/network/core/: CMakeLists.txt
psock/lib/network/requests/: CMakeLists.txt
psock/lib/network/sockets/: CMakeLists.txt  host.cpp
psock/lib/network/sockets/core/: CMakeLists.txt  socket.cpp  socket.h
psock/src/: main.cpp
src/: https.js  main.js  router.js
sysock/: .gitignore  CMakeLists.txt  Makefile
sysock/ext/dstrct/: CMakeLists.txt  bstree.h  lnlist.h  queue.h
sysock/lists/: node.cpp  node.h
sysock/src/: CMakeLists.txt  http.cpp  http.h  main.cpp  socket.cpp  socket.h
websockets/: Dockerfile  Makefile
websockx/: CMakeLists.txt
websockx/lib/sockx/network/: CMakeLists.txt
websockx/lib/sockx/request/: CMakeLists.txt
websockx/lib/sockx/request/core/: request.cpp  request.h
websockx/lib/sockx/request/protocols/: http.cpp
websockx/lib/sockx/validation/: regex-validator.cpp  regex-validator.h
wsocc/: CMakeLists.txt
wsocc/lib/: CMakeLists.txt
wsocc/lib/lib-network/: CMakeLists.txt
wsocc/lib/lib-network/network/: host.cpp  host.h
wsocc/lib/lib-network/network/core/: CMakeLists.txt  socket.h
wsocc/lib/lib-network/network/request/: CMakeLists.txt  http.h
wsocc/src/: main.cpp
wsocks/: CMakeLists.txt
wsocks/lib/: CMakeLists.txt
wsocks/lib/data-structs/: node.h
wsocks/lib/sockx/: CMakeLists.txt
wsocks/lib/sockx/network/requests/: CMakeLists.txt
wsocks/lib/sockx/network/socks/: host.cpp  host.h
wsocks/lib/sockx/network/socks/core/: CMakeLists.txt
wsocks/src/: main.cpp
wsockx/: CMakeLists.txt  Makefile
wsockx/lib/data-structs/: CMakeLists.txt  binary-search-tree.h  linked-list.h  node.h  queue.h
wsockx/lib/network/: CMakeLists.txt
wsockx/lib/network/core/: CMakeLists.txt
wsockx/lib/network/core/requests/: CMakeLists.txt
wsockx/lib/network/core/socks/: sock.h
wsockx/lib/network/sockx/: network.h
wsockx/lib/network/sockx/hosts/: CMakeLists.txt  host.cpp
wsockx/lib/sockx/: CMakeLists.txt  server.h  sockx.h
wsockx/lib/sockx/core/socks/: CMakeLists.txt  sock.cpp
wsockx/lib/sockx/network/: CMakeLists.txt  host.cpp  host.h
wsockx/lib/sockx/network/core/: CMakeLists.txt  sock.cpp  sock.h
wsockx/lib/sockx/network/servers/: host.cpp  host.h
wsockx/lib/sockx/network/sockets/: sock.cpp  sock.h
wsockx/lib/sockx/protocol/: CMakeLists.txt  http.cpp  http.h
wsockx/lib/sockx/protocol/core/: request.cpp  request.h
wsockx/lib/sockx/request/core/: request.cpp  request.h
wsockx/lib/sockx/request/protocols/: http.cpp  http.h
wsockx/lib/sockx/socks/: host.cpp  host.h
wsockx/lib/sockx/validation/: CMakeLists.txt  regex-validator.cpp  regex-validator.h
wsockx/src/: main.cpp
